# multiminimizers

./: .gitignore  Cargo.toml  README.md  analyse.py  build.rs  coverage.sh  data.txt
analyse/: analyse.py
benches/: bench.rs  plot_bench.py
density/: .gitignore  Cargo.toml  README.md  plot-conservation.py  plot-density.py
density/src/: lib.rs  main.rs  order.rs
density/src/schemes/: greedy.rs  mod.rs
monte_carlo_analysis/: README.md  random_minimizers_density.py
multimodmini/: Cargo.toml  plot_sk_bit_usage.py
multimodmini/src/: main.rs
probabilistic_model/: README.md  random_minimizers_deduplicated_density_theory.py  random_minimizers_density.py  random_minimizers_empirical_densities_comparison.py
src/: lib.rs  main.rs  simd_canonical_sticky_minimizer_iterator.rs  subsequence.rs  superkmer.rs  superkmers_computation.rs  two_bits.rs
src/my_minimizer_iter/: canonical_sticky_minimizer_iterator.rs  mod.rs  simd_canonical_sticky_minimizer_iterator.rs
src/needless_modules/: index.rs  lines_iter.rs  mod.rs  quotient_set.rs
tests/unit_test_data/: index.fa  query.fa
