[package]
name = "sticky-mini"
version = "0.1.0"
edition = "2024"
default-run = "plot"

[dependencies]
num-traits = "0.2.15"
minimizer-queue = "1.2"
itertools = "0.14.0"
xxhash-rust = { version = "0.8.12", features = ["xxh3", "const_xxh3"] }
packed-seq = "3.0.3"
log = "0.4"
env_logger = "0.11"
rand = "0.9.2"
minimizer-iter = "1.2.1"
wyhash2 = "0.2.1"
ahash = "0.8.12"
simd-minimizers = { git = "https://github.com/rust-seq/simd-minimizers.git", branch = "seed" }
collect_macro = { git = "https://github.com/lrobidou/collect_macro" }
serde_json = "1.0.143"
serde = { version = "1.0.219", features = ["derive"] }
clap = { version = "4.5.48", features = ["derive"] }
needletail = "0.6.3"
bincode = "1.3.3"
uuid = { version = "1.18.1", features = ["v4"] }

[dev-dependencies]
criterion = { version = "0.7", features = ["html_reports"] }


[[bench]]
name = "bench"
harness = false
