[package]
name = "multimodmini"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.9.2"
clap = { version = "4.5.48", features = ["derive"] }


[profile.dev]
opt-level = 3
debug = 0
overflow-checks = false
lto = "thin"
codegen-units = 4

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
overflow-checks = false
